--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,5 +1,6 @@
 <!-- nav.html -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-
+springsecurity4">
     <a class="navbar-brand" href="#"></a>
     <img src="/images/student-48.png" alt="logo"/>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar"
@@ -7,7 +8,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" sec:authorize="isAuthenticated()">
             <li class="nav-item ">
                 <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
             </li>
@@ -16,11 +17,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/mark/list">Ver Notas</a>
-                    <a class="dropdown-item" href="/mark/add">Agregar Nota</a>
+                    <a class="dropdown-item" href="/mark/add" sec:authorize="hasRole('ROLE_PROFESSOR')">Agregar Nota</a>
                 </div>
             </li>
 
-            <li class="nav-item dropdown active">
+            <li sec:authorize="hasRole('ROLE_ADMIN')" id= "users-menu" class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Gestión de usuarios
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -29,7 +30,7 @@
                 </div>
             </li>
 
-            <li class="nav-item dropdown">
+            <li sec:authorize="hasRole('ROLE_ADMIN')" id= "professor-menu" class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="profesorDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Gestión de profesores </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/professor/list">Ver profesores</a>
@@ -53,16 +54,22 @@
                     </a>
                 </div>
             </li>
-            <li class="nav-item">
+            <li sec:authorize="!isAuthenticated()" class="nav-item">
                 <a class="nav-link" href="/signup" th:text="#{signup.message}">
                     <i class='fas fa-user-alt' style='font-size:16px'></i>
                     <span>Registrate</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <li sec:authorize="!isAuthenticated()" class="nav-item">
                 <a class="nav-link" href="/login" th:text="#{login.message}">
                 <i class='fas fa-sign-in-alt' style='font-size:16px'></i>
                     <span>Identifícate</span>
+                </a>
+            </li>
+            <li sec:authorize="isAuthenticated()" class="nav-item">
+                <a class="nav-link" href="/logout">
+                    <i class='fas fa-sign-out-alt' style='font-size:16px'></i>
+                    <span>Desconectar</span>
                 </a>
             </li>
         </ul>
