--- a/src/main/resources/templates/mark/list.html
+++ b/src/main/resources/templates/mark/list.html
@@ -16,10 +16,17 @@
     </form>
     <p>Las notas que actualmente figuran en el sistema son las siguientes:</p>
     <button type="button" id="updateButton" class="btn btn-default">Actualizar</button>
-    <script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
         $( "#updateButton" ).click(function() {
-            $("#tableMarks").load('/mark/list/update');
+            var numberPage = [[${param.page}]];
+            var urlUpdate = '/mark/list/update';
+            if (numberPage != null ){
+                urlUpdate += "?page="+numberPage[0];
+            }
+            $("#tableMarks").load(urlUpdate);
         });
+        /*]]>*/
     </script>
     <div class="table-responsive">
         <table class="table table-hover" th:fragment="tableMarks" id="tableMarks">
@@ -48,7 +55,12 @@
                                 /*<![CDATA[*/
                                 $( "#resendButton"+ "[[${mark.id}]]").click(function() {
                                     $.get( "/mark/[[${mark.id}]]/noresend", function( data ) {
-                                        $("#tableMarks").load('/mark/list/update');
+                                        var numberPage = [[${param.page}]];
+                                        var urlUpdate = '/mark/list/update';
+                                        if ( numberPage != null ){
+                                            urlUpdate += "?page="+numberPage[0];
+                                        }
+                                        $("#tableMarks").load(urlUpdate);
                                     });
                                 });
                                 /*]]>*/
@@ -61,7 +73,12 @@
                                 /*<![CDATA[*/
                                 $( "#noresendButton"+ "[[${mark.id}]]" ).click(function() {
                                     $.get( "/mark/[[${mark.id}]]/resend", function( data ) {
-                                        $("#tableMarks").load('/mark/list/update');
+                                        var numberPage = [[${param.page}]];
+                                        var urlUpdate = '/mark/list/update';
+                                        if ( numberPage != null ){
+                                            urlUpdate += "?page="+numberPage[0];
+                                        }
+                                        $("#tableMarks").load(urlUpdate);
                                     })
                                 });
                                 /*]]>*/
@@ -74,9 +91,10 @@
             </tbody>
         </table>
     </div>
+    <footer th:replace="fragments/pagination"/>
 	<div th:if="${#lists.isEmpty(markList)}"> No marks </div>
 </div>
-
+<footer th:replace="fragments/footer"/>
 
 </body>
 </html>
