--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -30,11 +30,11 @@ springsecurity4">
                 </div>
             </li>
 
-            <li sec:authorize="hasRole('ROLE_ADMIN')" id= "professor-menu" class="nav-item dropdown">
+            <li id= "professor-menu" class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="profesorDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Gestión de profesores </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/professor/list">Ver profesores</a>
-                    <a class="dropdown-item" href="/professor/add">Agregar profesor</a>
+                    <a class="dropdown-item" href="/professor/add" sec:authorize="hasRole('ROLE_ADMIN')">Agregar profesor</a>
                 </div>
             </li>
         </ul>
